2008-02-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/swath.1: Escape minus signs. Thanks debian's lintian.

2008-02-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, NEWS:
	=== Version 0.3.2 ===

2008-02-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Remove unused ISODATE var. Remove checks for CC and
	CPP. Just CXX is enough.

2008-02-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Reveal the encoding conversion feature to users.

	* src/wordseg.cpp (Usage): Add '-u' option in help message.
	* src/swath.1: Add documentation for '-u' option, with example.
	* README: Mention the '-u' option for UTF-8 LaTeX files. Indent the
	sample codes for readability.

	* src/swath.1: Document the default matching scheme, and adjust the
	example accordingly.

2008-02-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (main):
	  - Also accept '--verbose' and '--help' options.
	  - Adjust indents around the code, for readability.
	  - Remove unnecessary continue's.
	  - Check boundary of argc for '-u' parsing.
	  - Free more allocated data (fileformat, method, unicode) on return
	    after printing usage.

2008-01-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (Usage): Revise wording for the help message.
	Use string catenation instead of separate printf's.

2008-01-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* README: Write document.
	* src/swath.1: Rewrite the whole page, with more detailed info.

2008-01-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am: Install dict in ${pkgdatadir}, not ${datadir}.
	* src/Makefile.am: Update dict location macro acoordingly.

2006-07-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.{h,cpp} (IsLeadChar(), IsLastChar()),
	src/filterhtml.cpp (GetNextToken()),
	src/filterlatex.cpp (GetNextToken()),
	src/filterrtf.cpp (GetNextToken()): Fixed char signedness portability